; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_file.c___fuse_direct_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_file.c___fuse_direct_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fuse_io_priv = type { %struct.file* }
%struct.file = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.inode* }
%struct.inode = type { i32 }
%struct.iovec = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.fuse_io_priv*, %struct.iovec*, i64, i32*)* @__fuse_direct_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @__fuse_direct_write(%struct.fuse_io_priv* %0, %struct.iovec* %1, i64 %2, i32* %3) #0 {
  %5 = alloca %struct.fuse_io_priv*, align 8
  %6 = alloca %struct.iovec*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.file*, align 8
  %10 = alloca %struct.inode*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store %struct.fuse_io_priv* %0, %struct.fuse_io_priv** %5, align 8
  store %struct.iovec* %1, %struct.iovec** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %13 = load %struct.fuse_io_priv*, %struct.fuse_io_priv** %5, align 8
  %14 = getelementptr inbounds %struct.fuse_io_priv, %struct.fuse_io_priv* %13, i32 0, i32 0
  %15 = load %struct.file*, %struct.file** %14, align 8
  store %struct.file* %15, %struct.file** %9, align 8
  %16 = load %struct.file*, %struct.file** %9, align 8
  %17 = getelementptr inbounds %struct.file, %struct.file* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load %struct.inode*, %struct.inode** %20, align 8
  store %struct.inode* %21, %struct.inode** %10, align 8
  %22 = load %struct.iovec*, %struct.iovec** %6, align 8
  %23 = load i64, i64* %7, align 8
  %24 = call i64 @iov_length(%struct.iovec* %22, i64 %23)
  store i64 %24, i64* %11, align 8
  %25 = load %struct.file*, %struct.file** %9, align 8
  %26 = load i32*, i32** %8, align 8
  %27 = call i64 @generic_write_checks(%struct.file* %25, i32* %26, i64* %11, i32 0)
  store i64 %27, i64* %12, align 8
  %28 = load i64, i64* %12, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %37, label %30

30:                                               ; preds = %4
  %31 = load %struct.fuse_io_priv*, %struct.fuse_io_priv** %5, align 8
  %32 = load %struct.iovec*, %struct.iovec** %6, align 8
  %33 = load i64, i64* %7, align 8
  %34 = load i64, i64* %11, align 8
  %35 = load i32*, i32** %8, align 8
  %36 = call i64 @fuse_direct_io(%struct.fuse_io_priv* %31, %struct.iovec* %32, i64 %33, i64 %34, i32* %35, i32 1)
  store i64 %36, i64* %12, align 8
  br label %37

37:                                               ; preds = %30, %4
  %38 = load %struct.inode*, %struct.inode** %10, align 8
  %39 = call i32 @fuse_invalidate_attr(%struct.inode* %38)
  %40 = load i64, i64* %12, align 8
  ret i64 %40
}

declare dso_local i64 @iov_length(%struct.iovec*, i64) #1

declare dso_local i64 @generic_write_checks(%struct.file*, i32*, i64*, i32) #1

declare dso_local i64 @fuse_direct_io(%struct.fuse_io_priv*, %struct.iovec*, i64, i64, i32*, i32) #1

declare dso_local i32 @fuse_invalidate_attr(%struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
